Corregi el texto

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Este un sitio web con GitHub pages</h1>
-<p>fue creado para mi estudio de I.A en platzy</p>
+<h1>Este es un sitio web con GitHub pages</h1>
+<p>Fue creado para mi curso de I.A en platzy</p>
 <p><img scr="https://media.tenor.com/WEJwvfk_B_EAAAAM/earth-revolve.gif"/><p>
 <p><img scr="https://media.tenor.com/UMOIhhkKEmIAAAAM/earth-lights.gif"/><p>
